# amap-rs

./: .gitignore  README.md  datasets.py  environment.yml  inference.py  pyproject.toml  requirements.txt  samplers.py  visualisation.py
src/amap-rs/: classification.py  regression.py
src/amap-rs/utils/: dl.py
src/amaprs/: classification.py  datasets.py  inference.py  regression.py  visualisation.py
src/amaprs/utils/: dl.py  geo.py
utils/: misc.py
