[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amap-rs"
dynamic = ["version"]
authors = [
  { name="Paul Tresson", email="paul.tresson@ird.fr" },
]
description = "Tool collection for DL and RS in AMAP"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torchgeo=>0.5.2",
    "timm=>0.9.2",
    "umap-learn=>0.5.5",
    "scikit-learn=>1.4.1.post1",
    "geopandas=>0.14.3",
]

[project.urls]
Homepage = "https://github.com/umr-amap/amap-rs"
Issues = "https://github.com/umr-amap/amap-rs/issues"
